Try fix for disappearing bent bands on iOS.

--- a/index.css
+++ b/index.css
@@ -210,6 +210,7 @@ body {
     position: relative;
     transform: skew(0, 30deg);
     transform-origin: top left;
+    width: 10000px;
 }
 
 .header,
